src/test/ui/regions-fn-subtyping-return-static-fail.stderr
error[E0308]: mismatched types
  --> $DIR/regions-fn-subtyping-return-static-fail.rs:48:12
   |
LL |     want_G(baz);
   |            ^^^ expected concrete lifetime, found bound lifetime parameter 'cx
   |
   = note: expected fn pointer `for<'cx> fn(&'cx S) -> &'static S`
                 found fn item `for<'r> fn(&'r S) -> &'r S {baz}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
